# spindle

./: .gitignore  Package.resolved  Package.swift  README.md  SPEC.md
.github/workflows/: release.yml
Sources/: main.swift
docs/: nb_bundle.md
python/: README.md  pyproject.toml
python/spindle/: __init__.py  cli.py  config.py  install.py  runner.py
python/spindle_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: nb_bundle.py
tests/: test_nb_bundle.sh
